fixed viewport, and vertical centering, and removed color pallette

--- a/login/login-default.html
+++ b/login/login-default.html
@@ -2,8 +2,12 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Login example</title>
 		<style>
+			html, body {
+				height: 100%;
+			}
 			body {
 				background: #F9F9F9;
 				border: 0;
@@ -88,11 +92,6 @@
 					</div>
 				</form>
 			</div>
-		</div>
-		<div>
-			<span style="display: inline-block; width: 20px; height: 20px; background: #343837;"></span> grassiest charcoal
-			<span style="display: inline-block; width: 20px; height: 20px; background: #03719C;"></span> indiscernible ocean blue
-			<span style="display: inline-block; width: 20px; height: 20px; background: #0F9B8E;"></span> unsusceptible green/blue
 		</div>
 	<script>
 		document.getElementById('login-form').addEventListener('submit', function(e) {
