cleaned up mobile nav. removed nav icon, and simplified js, cleaned up css as well

--- a/nav/bottom-mobile-nav.html
+++ b/nav/bottom-mobile-nav.html
@@ -7,13 +7,12 @@
 	</head>
 	<body>
 		<nav id="main-navigation" aria-labelledby="main navigation">
-			<a id="nav-btn">&#9776;</a>
 			<ul>
-				<li class="item item-1" onclick="toggleZ(this)">Home</li>
-				<li class="item item-2" onclick="toggleZ(this)">About</li>
-				<li class="item item-3" onclick="toggleZ(this)">Option 1</li>
-				<li class="item item-4" onclick="toggleZ(this)">Option 2</li>
-				<li class="item item-5" onclick="toggleZ(this)">Contact</li>
+				<li class="item item-1 active">Home</li>
+				<li class="item item-2">About</li>
+				<li class="item item-3">Option 1</li>
+				<li class="item item-4">Option 2</li>
+				<li class="item item-5">Contact</li>
 			</ul>
 		</nav>
 		<script type="text/javascript" src="bottom-mobile-nav.js"></script>
